--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "6.0.0"
   },
   "dependencies": {
-    "nodal": "0.13.0"
+    "nodal": "0.13.0",
+    "s3": "^4.4.0"
   },
   "devDependencies": {
     "chai": "~3.5.0",
