--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "archiver": "^1.3.0",
     "nodal": "0.13.0",
-    "s3": "^4.4.0"
+    "s3": "^4.4.0",
+    "webshot": "^0.18.0",
+    "website-scraper": "^2.1.0"
   },
   "devDependencies": {
     "chai": "~3.5.0",
