--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "watch": "pm2 start index.js --watch",
     "watch:logs": "pm2 logs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --opts ./test/mocha.opts",
+    "test:acceptance": "mocha --opts ./test/mocha.acceptance.opts",
+    "test:acceptance:watch": "yarn test:acceptance --watch --watch-extensions ts"
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,19 @@
   },
   "homepage": "https://github.com/edgar971/site-scraper-api#readme",
   "dependencies": {
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^2.2.46",
     "@types/node": "^9.3.0",
+    "@types/sinon-chai": "^2.7.29",
+    "axios": "^0.17.1",
+    "chai": "^4.1.2",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
     "koa-router": "^7.3.0",
+    "mocha": "^4.1.0",
     "pm2": "^2.9.1",
+    "sinon": "^4.1.4",
+    "sinon-chai": "^2.14.0",
     "ts-node": "^4.1.0"
   },
   "devDependencies": {
