--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.3.0",
     "mocha": "^4.1.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "pm2": "^2.9.1",
+    "sequelize": "^4.31.0",
     "sinon": "^4.1.4",
     "sinon-chai": "^2.14.0",
     "ts-node": "^4.1.0"
