--- a/common/package.json
+++ b/common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "common",
   "version": "1.0.0",
-  "description": "common utilities",
+  "description": "common utilities for website scraper",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
