--- a/scraper/package.json
+++ b/scraper/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "@types/cheerio": "^0.22.7",
     "@types/puppeteer": "^1.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "puppeteer": "^1.0.0"
   }
 }
